[project]
name = "laser-orbit-determination"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jdk4py==17.0.9.2",
    "jupyterlab>=4.4.0",
    "kaleido==0.2.1",
    "numpy>=2.2.4",
    "orekit-jpype==12.0.2.0",
    "orekitdata",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "spacetrack>=1.4.0",
]

[tool.uv.sources]
orekitdata = { git = "https://gitlab.orekit.org/orekit/orekit-data.git" }
